--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Kell</title>
   <script src="clock.js"></script>
   
   <style>
@@ -64,7 +64,7 @@ li a:hover:not(.active) {
 </head>
 <body>
 <ul>
-  <li><a href="#about">Repositoorium</a></li>
+  <li><a href="https://github.com/eesrakenduste-arendamine-2018k/1.ea-kodutoo/pull/68">Repositoorium</a></li>
   <li><a onclick="toggleClock()">Kliki siia</a></li>
   <li><a onclick="randomizeColor()">Kliki siia</a></li>
   
